--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -11,9 +11,9 @@ jobs:
         uses: sedstart/runlocal@v1
         with:
           api_key: ${{ secrets.SEDSTART_KEY }}
-          project_id: 418
-          suite_id: 392
-          profile_id: 848
+          project_id: 612
+          test_id: 4888
+          profile_id: 1017
           browser: chrome
           headless: false
           environment: QA
